--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,8 @@
+<!--
+	This is a temporary client for the chat, at the end of the build
+	i will looks much better.
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
